docs: add jscoc comment to exported function

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "Coherent GT",
     "msfs"
   ],
-  "author": "Navigraph AB",
+  "author": "Navigraph KB",
   "license": "UNLICENSED",
   "bugs": {
     "email": "dev@navigraph.com"
