--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "types": "./index.d.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "release": "standard-version"
   },
   "keywords": [
     "PKCE",
@@ -21,6 +22,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "standard-version": "^9.3.1"
   }
 }
